# napari-correct-drift

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  how_to.rst  how_to_roi.rst  index.rst  install.rst  introduction.rst
src/napari_correct_drift/: __init__.py  _core.py  _sample_data.py  _widget.py  napari.yaml
src/napari_correct_drift/_tests/: test_core.py  test_sample_data.py  test_widget.py
